force-app/main/default/objects/hed__Test__c/fields/Certification_URL__c.field-meta.xml
<CustomField>
    <fullName>Certification_URL__c</fullName>
    <label>Certification URL</label>
    <type>Url</type>
</CustomField>