force-app/main/default/objects/hed__Test__c/fields/Credential_ID__c.field-meta.xml
<CustomField>
    <fullName>Credential_ID__c</fullName>
    <inlineHelpText>Enter the unique identification number or string of the exam</inlineHelpText>
    <label>Credential ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>