force-app/main/default/objects/hed__Test__c/fields/Exam_Name__c.field-meta.xml
<CustomField>
    <fullName>Exam_Name__c</fullName>
    <inlineHelpText>Enter the name of the exam passed</inlineHelpText>
    <label>Exam Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>