force-app/main/default/objects/hed__Test__c/fields/hed__Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>hed__Credits_Earned__c</fullName>
    <description
  >The number of credits earned by completing the Test.</description>
    <inlineHelpText
  >The number of credits earned by completing the Test.</inlineHelpText>
    <label>Credits Earned</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>