force-app/main/default/objects/hed__Test__c/fields/Issuing_Organization__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issuing Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>