force-app/main/default/objects/hed__Test__c/fields/Total_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Percentage__c</fullName>
    <formula>IF(
Number_of_Questions__c &lt;&gt; 0,
Total_Score__c/Number_of_Questions__c,
NULL
)</formula>
    <label>Total Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>