force-app/main/default/objects/hed__Test__c/listViews/Certifications.listView-meta.xml
<ListView>
    <fullName>Certifications</fullName>
    <columns>NAME</columns>
    <columns>Exam_Name__c</columns>
    <columns>Issuing_Organization__c</columns>
    <columns>Number_of_Questions__c</columns>
    <columns>Total_Score__c</columns>
    <columns>Total_Percentage__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>hed__Test_Type__c</field>
        <operation>equals</operation>
        <value>Professional Certification</value>
    </filters>
    <label>Certifications</label>
</ListView>