force-app/main/default/objects/hed__Test__c/listViews/hed__All.listView-meta.xml
<ListView>
    <fullName>hed__All</fullName>
    <columns>NAME</columns>
    <columns>Issuing_Organization__c</columns>
    <columns>Exam_Name__c</columns>
    <columns>hed__Test_Date__c</columns>
    <columns>hed__Test_Type__c</columns>
    <columns>Total_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>