force-app/main/default/objects/hed__Test__c/listViews/Skills_Assessments.listView-meta.xml
<ListView>
    <fullName>Skills_Assessments</fullName>
    <columns>NAME</columns>
    <columns>Exam_Name__c</columns>
    <columns>hed__Test_Date__c</columns>
    <columns>Issuing_Organization__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>hed__Test_Type__c</field>
        <operation>equals</operation>
        <value>Skills Assessment</value>
    </filters>
    <label>Skills Assessments</label>
</ListView>