force-app/main/default/objects/hed__Test__c/listViews/Superbadges.listView-meta.xml
<ListView>
    <fullName>Superbadges</fullName>
    <columns>NAME</columns>
    <columns>Exam_Name__c</columns>
    <columns>Issuing_Organization__c</columns>
    <columns>hed__Test_Date__c</columns>
    <columns>Total_Score__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>hed__Test_Type__c</field>
        <operation>equals</operation>
        <value>Superbadge</value>
    </filters>
    <label>Superbadges</label>
</ListView>